Refactoring code to fix some formatting problems (alignment).  Deleted whitespace and deleted some unnecessary code.

--- a/public/css/resume.css
+++ b/public/css/resume.css
@@ -31,14 +31,6 @@
         background-color: #2b3e50;
       }
       
-      .link-bar {
-        height: 100px;
-        background-color: #000;
-        padding: 5px; 
-        margin-top: 20px;
-        margin-bottom: 20px;
-      }
-
       #ex-icons-left {
         margin-left: 500px;
       }
